tests/bad/is_expr_standalone.oc
/// fail: Can only use `is` inside an if statement condition. Use `==` for standalone enum comparison

enum Foo {
    Bar(val: i32)
    Baz(x: str, y: i32)
}

def main() {
    let x = Foo::Bar(42)
    let y = x is Foo::Bar
    println(`y is {y}`)
}